[package]
name = "cryptotax"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
rayon = "1.5.2"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
